--- a/DSSG-website-template-main/_config.yml
+++ b/DSSG-website-template-main/_config.yml
@@ -7,8 +7,7 @@ permalink:        pretty
 # Setup
 title:            DSSG Project Name
 tagline:          ''
-description:      'A 2022 Data Science for Social Good summer fellowship project at the University of Washington' 
-url:              "https://uwescience.github.io"
+url:              "https://atasayin.github.io/"
 baseurl:          "/DSSG-website-template"
 
 
@@ -18,4 +17,4 @@ paginate:         5
 version:          0.0.0
 
 github:
-  repo:           https://github.com/uwescience/DSSG-website-template/
+  repo:          https://github.com/atasayin/atasayin.github.io/
